# recall

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  README.zh-CN.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: good-first-issues.md
docs/launch/: demo.sh  posts.md  reddit-plan.md
engram/: __init__.py  bench.py  cli.py  config.py  core.py  evals.py  extract.py  graph_extract.py  ingest.py  instrument.py  mcp_server.py  memory.py  otel_export.py  pricing.py  store.py
engram/adapters/: __init__.py  anthropic_adapter.py  gemini_adapter.py  openai_adapter.py
engram/dashboard/: server.py
examples/: basic.py
memstash/: __init__.py  bench.py  cli.py  config.py  core.py  evals.py  extract.py  firewall.py  graph_extract.py  ingest.py  instrument.py  mcp_server.py  memory.py  otel_export.py  pricing.py  store.py
memstash/adapters/: __init__.py  anthropic_adapter.py  gemini_adapter.py  openai_adapter.py
memstash/dashboard/: server.py
recall/: __init__.py  bench.py  cli.py  config.py  core.py  evals.py  extract.py  extract_llm.py  graph_extract.py  ingest.py  instrument.py  mcp_server.py  memory.py  otel_export.py  pricing.py  prompts.py  reconcile.py  store.py
recall/adapters/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  openai_adapter.py
recall/dashboard/: __init__.py  server.py
tests/: test_bench.py  test_bitemporal.py  test_core.py  test_embeddings.py  test_eval_suites.py  test_evals.py  test_features.py  test_firewall.py  test_graph.py  test_graph_retrieval.py  test_ingest.py  test_instrument.py  test_lifecycle.py  test_memory_ops.py  test_multiturn.py  test_otel.py  test_plugins.py  test_pricing_map.py  test_prompts.py  test_provenance.py  test_reconcile.py  test_reliability.py  test_retrieval_budget.py  test_robustness.py  test_trace_tree.py  test_typed_memory.py  test_v3.py
