[project]
name = "zion-recall-ai"
version = "0.12.0"
description = "Your local AI brain: persistent memory + full observability for any model. Data never leaves your machine."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "zionLyl" }]
requires-python = ">=3.9"
keywords = ["ai", "agent", "memory", "observability", "llm", "local-first", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.optional-dependencies]
# Embeddings for semantic memory search (optional; falls back to keyword search)
embeddings = ["sentence-transformers>=2.2"]
# Model adapters
openai = ["openai>=1.0"]      # also covers DeepSeek, Qwen, Moonshot, GLM, Groq,
                              # Mistral, xAI, OpenRouter, Ollama, LM Studio, etc.
anthropic = ["anthropic>=0.18"]
gemini = ["google-generativeai>=0.5"]
# Dashboard
dashboard = ["fastapi>=0.110", "uvicorn>=0.27"]
# MCP server — expose recall memory to any MCP-aware agent
mcp = ["mcp>=1.0"]
# OpenTelemetry / OpenInference span export
otel = ["opentelemetry-sdk>=1.20", "opentelemetry-exporter-otlp>=1.20"]
# PDF document ingestion
pdf = ["pypdf>=4.0"]
# Everything
all = [
    "sentence-transformers>=2.2",
    "openai>=1.0",
    "anthropic>=0.18",
    "google-generativeai>=0.5",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "mcp>=1.0",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp>=1.20",
    "pypdf>=4.0",
]
dev = ["pytest>=7.0", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/zionLyl/recall"
Repository = "https://github.com/zionLyl/recall"
Issues = "https://github.com/zionLyl/recall/issues"

[project.scripts]
recall = "recall.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["recall"]

[tool.ruff]
line-length = 100
target-version = "py39"
